# Motif-Routing-Networks

./: .gitignore  LICENSE  README.md
dynamic_motif_networks/: __init__.py  main.py
dynamic_motif_networks/configs/: hyperparams.yaml  registry.json
dynamic_motif_networks/core/: CMakeLists.txt  control_layer.py  dwt.py  dwt3d_cpp.cpp  motif_encoder.py  neuron.py  scheduler.py  snn_layer.py
dynamic_motif_networks/experiments/: baseline_dmn.py  dishwashing_arm.ipynb
dynamic_motif_networks/tests/: test_dwt.py  test_embedding.py  test_neuron.py  test_reinforcement.py
dynamic_motif_networks/training/: buffers.py  loss.py  reinforcement.py
